Added command that returns input sources, implemented command in java and javascript. Implemented javascript function that changes input source.

--- a/src/main/resources/static/dn500av/dn500av.html
+++ b/src/main/resources/static/dn500av/dn500av.html
@@ -37,10 +37,8 @@
                 <td>Source</td>
                 <td id="get-source">Loading...</td>
                 <td>
-                    <select>
-                        <option value="" selected disabled hidden>Options</option>
-                        <option>stuff1</option>
-                        <option>stuff2</option>
+                    <select id="source-list">
+                        <option value="" selected disabled hidden>Source</option>
                     </select>
                 </td>
             </tr>
