Fixed various stuff in js and html and some java stuff.

--- a/src/main/resources/static/dn500av/dn500av.html
+++ b/src/main/resources/static/dn500av/dn500av.html
@@ -23,16 +23,11 @@
                 <td>Power</td>
                 <td id="power-setting">Loading...</td>
                 <td>
-                    <select>
-                        <option>On</option>
-                        <option>Off</option>
+                    <select id="power-list">
+                        <option value="On">On</option>
+                        <option value="Off">Off</option>
                     </select>
                 </td>
-            </tr>
-            <tr>
-                <td>PowerState</td>
-                <td id="get-powerstate">Loading...</td>
-                <td></td>
             </tr>
             <tr>
                 <td>Source</td>
@@ -50,7 +45,7 @@
                     <select id="muteList">
                         <option value="" selected disabled hidden>Options</option>
                         <option value="mute">Mute</option>
-                        <option value="unMute">Unmute</option>
+                        <option value="unMute">unMute</option>
                     </select>
                 </td>
             </tr>
