Statemachine lock fix

--- a/src/main/resources/static/dn500av/dn500av.html
+++ b/src/main/resources/static/dn500av/dn500av.html
@@ -13,7 +13,7 @@
 <div include-html="template.html"></div>
 <div class="table-container">
     <table class="display-table">
-        <image src="Images/soundsystem_icon_simple.png" alt="projector image">
+        <image src="Images/sound_system.png" alt="projector image">
             <tr class="header-row">
                 <td>Setting</td>
                 <td>Current Value</td>
