--- a/src/main/resources/static/dn500av/dn500av.html
+++ b/src/main/resources/static/dn500av/dn500av.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>Denon DN500AV</title>
     <meta charset="UTF-8">
@@ -13,7 +13,7 @@
 <div include-html="template.html"></div>
 <div class="table-container">
     <table class="display-table">
-        <image src="Images/sound_system.png" alt="projector image">
+        <tr><td colspan="3"><img src="Images/sound_system.png" alt="projector image"></td> </tr>
             <tr class="header-row">
                 <td>Setting</td>
                 <td>Current Value</td>
@@ -73,6 +73,6 @@
 <script>
     includeHTML();
 </script>
-</body>
 <script src="/dn500av/dn500av.js"></script>
+</body>
 </html>
